--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: "net.minecraftforge.gradle"
 apply plugin: "eclipse"
 
 group = "com.terraforged"
-version = "${mod_version}-mc${mc_version}"
+version = "${version}-mc${mc_version}"
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = "1.8"
 
 repositories {
