Initial update of FeatureManager to 1.16.1

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 repositories {
     mavenCentral()
     jcenter()
+    maven { url "https://maven.tterrag.com/" }
 }
 
 dependencies {
